--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,15 @@ dist-ssr
 *.sln
 *.sw?
 
-Other/
+# Environment variables
+.env
+.env.local
+.env.development
+.env.development.local
+.env.test
+.env.test.local
+.env.production
+.env.production.local
+
 
 src/firebaseConfig.ts
